# recipe-app-api

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_users_api.py
app/: settings.py  urls.py
core/: admin.py  models.py
core/management/commands/: wait_for_database.py
core/migrations/: 0001_initial.py  0002_tag.py  0003_ingredient.py  0004_recipe.py  0005_recipe_image.py
core/tests/: test_admin.py  test_commands.py  test_models.py
recipe/: serializers.py  urls.py  views.py
recipe/tests/: test_ingredient_api.py  test_recipes_api.py  test_tags_api.py
