[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = "Recipe app api source code."
authors = ["Carlos Alberto Giralt Torriente <cagiraltt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
